--- a/index.html
+++ b/index.html
@@ -10069,7 +10069,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210104002813100" list="$:/ControlPanel $:/config/AutoSave test GettingStarted" modified="20210104002825243" title="$:/StoryList">
+<div created="20210104002813100" list="test GettingStarted" modified="20210104002825243" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
@@ -10181,8 +10181,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210104002805419" modified="20210104002808503" tags="" title="test">
-<pre></pre>
+<div created="20210104002805419" modified="20210104003414842" tags="" title="test">
+<pre>does it work?</pre>
 </div>
 
 
